# OpenCvSharp-UWP

./: .gitignore  OpenCvHololens.sln  OpenCvUWP.sln  README.md
OpenCV/: README.md
OpenCV/opencv-hololens/: CMakeLists.txt  build_hololens_uwp.bat
OpenCV/opencv-hololens-contrib/modules/xobjdetect/: CMakeLists.txt
OpenCvHololens/: OpenCvHololens.cpp  OpenCvHololens.vcxproj  OpenCvHololens.vcxproj.filters  Source.cpp  pch.h
OpenCvHololens/Source/: OpenCvSharpExtern.vcxproj  Source.def  aruco.cpp  bgsegm.cpp  calib3d.cpp  core.cpp  cuda.cpp  face.cpp  features2d.cpp  flann.cpp  highgui.cpp  highgui.h  img_hash.cpp  imgcodecs.cpp  imgproc.cpp  include_opencv.h  ml.cpp  my_functions.h  nonfree.cpp  shape.cpp  stitching.cpp  text.cpp  tracking.cpp  video.cpp  videoio.cpp  xfeatures2d.cpp  xphoto.cpp
OpenCvSharp/: CvObject.cs  DisposableCvObject.cs  DisposableObject.cs  ICvPtrHolder.cs  MatProxy.cs  OpenCVException.cs  OpenCvSharp.csproj  OpenCvSharp.dll.config  OpenCvSharpException.cs
OpenCvSharp/Cv2/: Cv2.cs  Cv2_calib3d.cs  Cv2_core.cs  Cv2_cuda.cs  Cv2_face.cs  Cv2_features2d.cs  Cv2_highgui.cs  Cv2_imgcodecs.cs  Cv2_imgproc.cs  Cv2_objdetect.cs  Cv2_optflow.cs  Cv2_photo.cs  Cv2_superres.cs  Cv2_video.cs  Cv2_xfeatures2d.cs
OpenCvSharp/Delegate/: CvErrorCallback.cs  CvMouseCallback.cs  CvTrackbarCallback.cs  MatForeachFunction.cs
OpenCvSharp/Fundamentals/: DisposableCvObject.cs  DisposableObject.cs  ICvPtrHolder.cs  OpenCvSharpException.cs  Ptr.cs  (+1 more)
OpenCvUWP/: OpenCvUWP.cpp  OpenCvUWP.vcxproj  OpenCvUWP.vcxproj.filters  packages.config
(+542 files in other folders)
